# iliailmer.github.io

./: .gitignore  .gitmodules  README.md  archives.html  authors.html  categories.html  index.html  index2.html  pelicanconf.py  publishconf.py  pyproject.toml  requirements.txt  tags.html  tasks.py  tipuesearch_content.js
.github/workflows/: builddeploy.yml
2019/03/: science-day.html
2019/06/: how-to-make-training-loop.html  paper-review.html
2020/02/: data-explore.html
2020/03/: precision-recall.html
2020/06/: numpy-learn.html
2020/08/: matlab-2-maple.html
2021/06/: my-google-summer-of-code-project.html
2021/07/: final-results.html  first-month-in-gsoc.html  structural-identifiability-toolbox.html
2021/08/: google-summer-of-code-final-results.html
2021/12/: installing-julia-and-some-quick-probability-theory-tricks.html  (+3 more)
author/: ilia-ilmer.html  ilia-ilmer2.html
category/: posts.html  posts2.html
drafts/: simulating-textbook-probability-problems-in-julia.html
feeds/: all.atom.xml  posts.atom.xml
pages/: about.html  cv.html  publications.html  software.html  talks.html
tag/: computer-vision.html  deep-learning.html  education.html  gsoc.html  image-enhancement.html  image-quality.html  julia.html  linear-regression.html  logistic-regression.html  machine-learning.html  maple.html  matlab.html  numpy.html  parameter-identifiability.html  probability.html  python.html  regular-expressions.html  review-series.html  scikit-learn.html  simulation.html  statistical-learning.html  symbolic-computing.html  talks.html  work-in-progress.html
(+32 files in other folders)
