[tool.poetry]
name = "pelican-blog"
version = "1.0.0"
description = "Pelican-based website"
authors = ["Ilia <i.ilmer@icloud.com>"]
license = "CC BY-SA 4.0"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
jupyter = "^1.0.0"
numpy = "^1.22.3"
scipy = "^1.8.0"
ipython = "^8.2.0"
matplotlib = "^3.5.1"
seaborn = "^0.11.2"
pelican = "^4.7.2"
Markdown = "^3.3.6"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
black = "^22.3.0"
flake8 = "^4.0.1"
mypy = "^0.942"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"